created the nav bar

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,4 +3,23 @@
   <p class="author__body">Web developer.</p>
 </div>
 
-<img />
+<img
+  src="/img/blog-2.jpg"
+  alt="A laptop"
+  class="hero-image"
+  width="600"
+  height="528"
+/>
+
+<section class="articles">
+  <h2 class="articles__heading">Latest Posts</h2>
+  <ul class="article-ul">
+    <li>
+      <a href="#">
+        <span>Post Title</span>
+        <span class="article-list__date">Date</span>
+      </a>
+    </li>
+  </ul>
+  <a href="#" class="pagination">&lt; View Older Posts</a>
+</section>
