--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,192 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600;700&display=swap');
+
+:root {
+    --black: #1c1c1c;
+    --gray: #7e7e7e;
+    --gray-light: #e4e4e4;
+    --red: #b30000;
+    --font-size-base: 1rem;
+    --font-size-md: clamp(1.25rem, 0.61vw + 1.1rem, 1.58rem)
+    --font-size-lg: clamp(1.56rem, 1vw + 1.31rem, 2.11rem)
+    --font-size-xl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem)
+    --border-radius: 10px
+}
 body {
-    background-color: red;
+    font-family: 'Poppins', sans-serif;
+    color: var(--black);
+    font-size: var(--font-size-base);
+    /* background-color: #faf5ee; */
+    /* background-color: #fff6ee; */
+    /* background-image: url("/img/noise.jpg"); */
+    margin: 0;
+    
+}
+a {color: var(--black)}
+h1 {font-size: var(--font-size-lg)}
+h2 {
+    font-size: var(--font-size-md)
+}
+h3 {
+    font-size: var(--font-size-xl)
+}
+
+input[type="text"]
+input[type="email"]
+input[type="password"]
+input[type="search"]
+select,
+textarea {
+    font-family: 'Poppins', sans-serif;
+    font-size: var(--font-size-base);
+    display: block;
+    box-sizing: border-box;
+    width: 100%;
+    padding: 0.7rem 0.7rem;
+    margin-bottom: 1rem;
+}
+
+.btn {
+    background-color: var(--black);
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+
+.btn-delete {
+    padding: 16px 32px;
+    background-color: var(--red);
+}
+
+img{
+    width: 100%;
+    height: auto;
+}
+
+
+
+/* layout */
+.container {
+    max-width: 700px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
+
+.main{
+    padding: 20px 0;
+}
+
+.hero-image {
+    max-height: 528px;
+    filter: drop-shadow(0px 44px 34px rgba(0,0,0,0.25));
+    overflow: hidden;
+    border-radius: var(--border-radius);
+    object-fit: contain;
+}
+.header{
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto;
+    padding-top: 10px;
+    grid-template-areas: 
+    "logo button"
+    "menu menu";
+}
+
+@media only screen and (min-width: 768px){
+    .header{
+        grid-template-columns: auto 1fr auto;
+        grid-template-areas: 
+        "logo menu button";
+    }
+}
+
+/* header{
+    min-height: 5vw; 
+    width: 100%;
+   
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        border-radius: 7px;
+        box-shadow: 2px  black;
+      
+} */
+/* .header__nav > ul {
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+    list-style: none;
+    font-weight: 600;
+    padding: 0;
+} */
+
+/* .header__nav li a {
+    text-decoration: none;
+} */
+ .header__logo {
+    grid-area: logo;
+    font-weight: 800;
+    font-size: 25px;
+    text-decoration: none;
+}
+
+.header__button button {
+    display: flex;
+    gap: 0.3rem;
+    align-items: center;
+    border: 0;
+    padding: 6px 12px;
+    background: none;
+    border-radius: var(--border-radius);
+    border: 2px solid transparent;
+    font-size: var(--font-size-base);
+    font-weight: 600;
+    color: var(--black);
+}
+
+
+.header__logo:hover {
+    text-decoration: underline;
+}
+
+.header__nav {
+    grid-area: menu;
+    display: flex;
+    justify-content: center;
+}
+
+.header__button {
+    grid-area: button;
+    display: flex;
+    justify-content: end;
+}
+
+.header__button button:hover{
+    border: 2px solid var(--black)
+}
+
+.header__nav ul{
+    list-style-type: none;
+    display: flex;
+    gap: 1rem;
+    font-weight: 600;
+    padding: 0;
+}  
+
+.header__nav ul a {
+    text-decoration: none;
+    padding: 10px;
+}
+
+.header__nav ul a:hover {
+    text-decoration: underline;
+}
+
+.header__nav ul a.active {
+    color: var(--gray);
 }
