--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,17 +3,51 @@
   <p class="author__body">Web developer.</p>
 </div>
 
-<img
-  src="/img/blog-2.jpg"
-  alt="A laptop"
-  class="hero-image"
-  width="600"
-  height="528"
-/>
+<div id="picture-container">
+  <img
+    src="/img/blog-2.jpg"
+    alt="A laptop"
+    class="hero-image"
+    width="600"
+    height="528"
+    id="image-1"
+  />
+  <img
+    src="/img/blog-3.jpg"
+    alt="A laptop"
+    class="hero-image"
+    width="600"
+    height="528"
+    id="image-2"
+  />
+  <img
+    src="/img/blog-4.jpg"
+    alt="A laptop"
+    class="hero-image"
+    width="600"
+    height="528"
+    id="image-3"
+  />
 
-<section class="articles">
-  <h2 class="articles__heading">Latest Posts</h2>
+  <img
+    src="/img/blog-5.jpg"
+    alt="A laptop"
+    class="hero-image"
+    width="600"
+    height="528"
+    id="image-4"
+  />
+</div>
+
+<section class="article">
+  <h2 class="article__heading">Latest Posts</h2>
   <ul class="article-ul">
+    <li>
+      <a href="#">
+        <span>Post Title</span>
+        <span class="article-list__date">Date</span>
+      </a>
+    </li>
     <li>
       <a href="#">
         <span>Post Title</span>
