--- a/views/partials/header_admin.ejs
+++ b/views/partials/header_admin.ejs
@@ -1,12 +1,5 @@
 <header class="header">
-  <a href="/">
-    <img
-      class="header__logo"
-      style="width: 50%; height: 50%"
-      src="/img/img-7.png"
-      alt=""
-    />
-  </a>
+  <a href="/" class="header__logo">Admin Panel </a>
   <nav class="header__nav">
     <ul>
       <li>
@@ -21,9 +14,6 @@
     </ul>
   </nav>
   <div class="header__button">
-    <button class="searchBtn" aria-expanded="false">
-      Search
-      <i class="fa fa-search"></i>
-    </button>
+    <button>Logout</button>
   </div>
 </header>
