--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,6 +11,7 @@
     --font-size-xl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem)
     --border-radius: 10px
 }
+
 body {
     font-family: 'Poppins', sans-serif;
     color: var(--black);
@@ -86,6 +87,7 @@ img{
     object-fit: contain;
 }
 .header{
+    width: 100%;
     display: grid;
     align-items: center;
     grid-template-columns: 1fr 1fr;
@@ -98,7 +100,8 @@ img{
 
 @media only screen and (min-width: 768px){
     .header{
-        grid-template-columns: auto 1fr auto;
+        /* grid-template-columns: auto 1fr auto; */
+        grid-template-columns: 3fr 7fr auto;
         grid-template-areas: 
         "logo menu button";
     }
@@ -147,6 +150,7 @@ img{
     font-size: var(--font-size-base);
     font-weight: 600;
     color: var(--black);
+    cursor: pointer;
 }
 
 
@@ -164,10 +168,15 @@ img{
     grid-area: button;
     display: flex;
     justify-content: end;
+   
 }
 
 .header__button button:hover{
-    border: 2px solid var(--black)
+    /* border: 2px solid var(--black); */
+    border-radius: 10px;
+    background-color: #297bf3;
+    border: none;
+    color: #fff;
 }
 
 .header__nav ul{
@@ -208,6 +217,10 @@ img{
 .article__heading{
     margin-top: 4rem;
     font-weight: 800;
+    font-size: clamp(1.13rem, calc(1.08rem +0.22vw), 1.25rem);
+}
+.article__heading h1 {
+    font-size: clamp(1.13rem, calc(1.08rem +0.22vw), 1.25rem);
 }
 
 .article-ul {
@@ -259,7 +272,7 @@ img{
 }
 
 .article-ul:hover li {
-    filter: blut(3px);
+    filter: blur(1px);
 }
 
 .article-ul:hover li:hover {
@@ -288,13 +301,14 @@ img{
 
 /* searchBar */
 .searchBar{
-    /* visibility: hidden;
-    transform: translateY(-100px); */
+    visibility: hidden;
+    transform: translateY(-100px);
     background-color: var(--black);
     padding: 4px 0;
     position: absolute;
     left: 0;
     right: 0;
+   
 }
 
 .searchBar.open{
@@ -305,6 +319,7 @@ img{
 .searchBar input {
     margin: 0; 
     width: 100%;
+    /* height: 2rem; */
     padding: 0;
 }
 
@@ -313,7 +328,9 @@ img{
     top: 0;
     right: 0;
     color: var(--gray-light);
-    padding: 15px;
+    padding: 5px;
+    cursor: pointer;
+   
 }
 
 /* admin Dashboard */
