created a like button

--- a/views/partials/header_admin.ejs
+++ b/views/partials/header_admin.ejs
@@ -1,5 +1,5 @@
 <header class="header">
-  <a href="/" class="header__logo">Admin Panel </a>
+  <a href="/dashboard" class="header__logo">Admin Panel </a>
   <nav class="header__nav">
     <ul>
       <li>
@@ -13,7 +13,7 @@
       </li>
     </ul>
   </nav>
-  <div class="header__button">
-    <button>Logout</button>
+  <div>
+    <a href="/logout" class="header__button">Logout</a>
   </div>
 </header>
