--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -345,17 +345,17 @@ img{
     margin: 0;
 }
 
-.admin-posts-controls form {
+.admin-post-controls form {
     display: inline-block;
 }
 
-.admin-posts-controls .btn {
+.admin-post-controls .btn {
     display: inline-block;
     background-color: var(--black);
     color: var(--gray-light);
     border: 0;
     text-decoration: none;
-    font-size: 8rem;
+    font-size: .8rem;
     padding: 4px 8px;
     line-height: 2;
 }
@@ -364,8 +364,13 @@ img{
     display: flex;
     justify-content: space-between;
     padding: 10px 0;
-}
+} 
 
+
+/* like btn */
+.like-btn.red {
+    color: rgb(250, 4, 4);
+}
 
 #image-1,
 #image-2,
