--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,6 +50,14 @@
           ><%= post.createdAt.toDateString() %></span
         >
       </a>
+      <div
+        class="like-btn <%= post.like_count > 0 ? 'red' : '' %>"
+        style="font-size: 15px"
+        data-post-id="<%= post._id %>"
+      >
+        <i class="fa fa-heart" aria-hidden="true"></i>
+        <span><%= post.like_count %></span>
+      </div>
     </li>
 
     <% }) %>
