--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,7 +10,7 @@
   <nav class="header__nav">
     <ul>
       <li>
-        <a href="/">Home</a>
+        <a href="/" %>>Home</a>
       </li>
       <li>
         <a href="/about">About</a>
