--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,2 +1,10 @@
 <h1><%= data.title %></h1>
 <article class="article"><%= data.body %></article>
+<div
+  class="like-btn <%= data.like_count > 0 ? 'red' : '' %>"
+  style="font-size: 15px"
+  data-post-id="<%= data._id %>"
+>
+  <i class="fa fa-heart" aria-hidden="true"></i>
+  <span><%= data.like_count %></span>
+</div>
